<resources>
    <string name="app_name">ClimateData</string>
    <string name="txtTitle">Monthly Average Temperature</string>
    <string name="txtYear">Year:</string>
    <string name="txtJanLabels" />
    <string name="txtJanLabel">January:</string>
    <string name="txtFebLabel">February:</string>
    <string name="txtMarLabel">March:</string>
    <string name="txtAprLabell" />
    <string name="txtAprLabel">April:</string>
    <string name="txtMayLabel">May:</string>
    <string name="txtJunLabel">June:</string>
    <string name="txtJulLabel">July:</string>
    <string name="txtAugLabel">August:</string>
    <string name="txtSepLabel">September:</string>
    <string name="txtOctLabel">October:</string>
    <string name="txtNovLabel">November:</string>
    <string name="txtDecLabel">December:</string>
    <string name="txtJan">JANUARY</string>
    <string name="txtFeb">FEBRUARY</string>
    <string name="txtMar">MARCH</string>
    <string name="txtApr">APRIL</string>
    <string name="txtMay">MAY</string>
    <string name="txtJun">JUNE</string>
    <string name="txtJul">JULY</string>
    <string name="txtAug">AUGUST</string>
    <string name="txtSep">SEPTEMBER</string>
    <string name="txtOct">OCTOBER</string>
    <string name="txtNov">NOVEMBER</string>
    <string name="txtDec">DECEMBER</string>
</resources>